@@ -3,14 +3,20 @@ Hash: SHA1
 
 DIST latexSuite20060325.tar.gz 217436 RMD160 158534e9686d5732fe2d91128add3bfbdb3d0d1a SHA1 e1bd2982f55f001e4ecf8c79c00bf5fdc521a650 SHA256 bb7d5e427f8026fe391a7bea698480b59f36bcc4497c3b225ecce0e4921e4584
 DIST vim-latex-1.8.23-20100129-r1104.tar.gz 399859 RMD160 1e555e04f501636784ef616b0d977951d11eef6f SHA1 05c96faf0c117775c520948cd32fc617f30573bb SHA256 b0205540853c5cf7d3e33b1fb73888e729a3c0e8f63c92d15dac91b892236480
+DIST vim-latex-1.8.23-20101027-r1112.tar.gz 402208 RMD160 104e913d26d91295a98eaec5a6d93a0b2db5d8d1 SHA1 44c861044989de3c428662f8bbb8d992f6c0af55 SHA256 ae2b050333c645cdf633b36e98f4d2664ee47cc0e18ad8374bf20b6d79f06bc6
 EBUILD latexsuite-1.5.20060325.ebuild 1118 RMD160 0f69897311e240c89e2049a1b9bdb7ddddd8bddc SHA1 1dd2ad51843dd0705ff5a6795e66d7168603afa3 SHA256 a4754dd577ea1e1b34bcbfe4d8c991975967cb934295a4c6909dd4355b1a3765
 EBUILD latexsuite-1.8.23.20100129.ebuild 1512 RMD160 80bd823515b10e1cc47430e154b261d7b5cf686f SHA1 1eb85fac1c732ee4bc5a181cc0e77314b9057aaa SHA256 ea4882f77ab558b9fa564b09fb316c23c1b30f02b5e8859cd6188af7df62de3e
-MISC ChangeLog 4978 RMD160 e975b7d42bf78dea3c024a32866612581b59080f SHA1 817698484bf59759923910da06c883ea8f32aff2 SHA256 1ecee27c2a681bf4f2d7c2c7377e71f8a7473551c4e5e2beb7d74178dcfd90a8
-MISC metadata.xml 399 RMD160 73c75596f41324686a4eb95e2a577e203c7d8a60 SHA1 0c9a58b53d9534a1f0070dbf8882a24f442c3384 SHA256 5b61f4a8e85227a5a5411f55c483d2d1c62c583aab8f2ec3fed8230f8fbace7f
+EBUILD latexsuite-1.8.23.20101027.ebuild 1534 RMD160 d8ae8a1b6f2e8bf26cb3cb907dd8258c23e9b7a3 SHA1 973273190f174e0e1dbdad73da9d869c6dd5f91c SHA256 33ba333625a9629140686b128f4768adcc9e6b35e67eefae1f683d727d07b8bf
+MISC ChangeLog 5215 RMD160 736ec09fa93b11033b64c2a90943519d7faee8b4 SHA1 a286ae243ab6795966f2909c9f094f6ff675a352 SHA256 6f8a0cd640a8f15c23d09e21a63099d43a948818de76f37b4a9c84b17713d4d8
+MISC metadata.xml 468 RMD160 b793b5518434bcc710e9d3f6445618bf3810829f SHA1 4f8aecdc172a22d3c6341785f7e08663eb8d1ed3 SHA256 8210ea8fe6cb96bbf2a8d59f224d427cafde0c5766a9a1eda0b11a2ef193bec4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzO7BAACgkQNQqtfCuFneNDegCgjARdHbZVbsHzo7zpFZYCUPl1
-o6cAnAkmk2s9bvVIbFupatIJRd0oFgCj
-=JnIW
+iQEcBAEBAgAGBQJM28BwAAoJEEqz6FtPBkyjbosH/2AABnMW4sg6SEAHlzckeB0x
+A+TX1+jliwY+pJpemfHqWDbKqxEiCN2vsmObruV/5y7HPh2iihr503vJz8bSUoh9
+4hkPBwbtBXNBk8xCThAr/z2i/doneEVG9OkNTbdQeo5rzaXwBqVSTdeN9Olg8sr9
+23ynSsq3hVlVu/4ooH+eqkcMkLdYlWb/X7wHqM8vgl3K1UYnt0a/6PP9lqFf0rSA
+8fK9BN9INcFM6MO1F4UHmmXjXVCJQk2kW7T6BS1PyxXEkjU3aMcat8lMx+FQ175Z
+Oz+fLmWJWiswusyirdGm2b5CMVLN/xcpaFqs6Y6TigRCH+zAp8L1auggOFfuFt4=
+=mtiy
 -----END PGP SIGNATURE-----
